<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/add_friend"
        android:icon="@mipmap/ic_add_white_36dp"
        android:title="@string/menu_friend_add" />
    <item
        android:id="@+id/create_group"
        android:icon="@mipmap/ic_add_white_36dp"
        android:title="@string/menu_group_create" />
    <item
        android:id="@+id/search_group"
        android:icon="@mipmap/ic_add_white_36dp"
        android:title="@string/menu_query_group" />
    <item
        android:id="@+id/free_call"
        android:icon="@mipmap/ic_add_white_36dp"
        android:title="@string/phone_voice" />
    <item
        android:id="@+id/audio_meet"
        android:icon="@mipmap/ic_add_white_36dp"
        android:title="@string/meeting_moive" />
</menu>