<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.china.epower.chat.ui.activity.LoginActivity"
    >

  <include
      layout="@layout/include_header"
      android:id="@+id/header"
      />

  <ImageView
      android:layout_below="@+id/header"
      android:id="@+id/login_img"
      android:src="@mipmap/ic_launcher"
      android:layout_margin="32dp"
      android:layout_centerHorizontal="true"
      android:layout_width="96dp"
      android:layout_height="96dp"
      />

  <LinearLayout
      android:layout_marginLeft="@dimen/activity_horizontal_margin"
      android:layout_marginRight="@dimen/activity_horizontal_margin"
      android:id="@+id/login_edittext_container"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:layout_below="@+id/login_img"
      android:background="@drawable/shape_login"
      android:orientation="vertical"
      android:padding="@dimen/activity_horizontal_margin"
      >

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_input_username"
        android:inputType="text"
        android:padding="@dimen/activity_horizontal_margin"
        />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        />

  </LinearLayout>

  <android.support.v7.widget.AppCompatButton
      android:id="@+id/login_button"
      android:layout_margin="@dimen/activity_horizontal_margin"
      android:background="@drawable/shape_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/login_edittext_container"
      android:text="@string/login_start"
      android:textSize="18sp"
      android:textColor="@color/white"
      />
  <LinearLayout
      android:layout_alignParentBottom="true"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >
  <com.kevin.library.widget.DashedLine
      android:layout_marginTop="@dimen/activity_horizontal_margin"
      android:layout_marginLeft="@dimen/activity_horizontal_margin"
      android:layout_marginRight="@dimen/activity_horizontal_margin"
      android:layout_below="@+id/login_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      />
  <android.support.v7.widget.AppCompatTextView
      android:id="@+id/register"
      android:layout_gravity="center"
      android:text="@string/regist"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="@dimen/activity_horizontal_margin"
      />
  </LinearLayout>
</RelativeLayout>
